@@ -15,4 +15,5 @@ t/00-compile.t
 t/release-cpan-changes.t
 t/release-pod-coverage.t
 t/release-pod-syntax.t
+t/release-trailing-space.t
 weaver.ini
