@@ -12,7 +12,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300039, CPAN::Meta::Converter version 2.132661'
+generated_by: 'Dist::Zilla version 4.300039, CPAN::Meta::Converter version 2.132830'
 license: mit
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,13 +23,15 @@ requires:
   Fcntl: 0
   File::Basename: 0
   Getopt::Long: 0
+  JSON: 0
   List::Util: 0
   List::UtilsBy: 0
   MooX: 0
   URI: 0
+  autodie: 0
   strict: 0
   warnings: 0
 resources:
   bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=App-ManiacDownloader
   repository: ssh://hg@bitbucket.org/shlomif/perl-App-ManiacDownloader
-version: 0.0.2
+version: 0.0.3
