@@ -1,7 +1,7 @@
 
 
 This archive contains the distribution App-ManiacDownloader,
-version 0.0.2:
+version 0.0.3:
 
   a maniac download accelerator.
 
