@@ -26,4 +26,5 @@ repository.type = hg
 fake_home = 1
 skip = bump-ver
 [Test::CPAN::Changes]
+[Test::TrailingSpace]
 [VersionFromModule]
