@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 
-# this test was generated with Dist::Zilla::Plugin::Test::Compile 2.034
+# this test was generated with Dist::Zilla::Plugin::Test::Compile 2.036
 
 use Test::More  tests => 3 + ($ENV{AUTHOR_TESTING} ? 1 : 0);
 
@@ -21,6 +21,8 @@ use File::Temp;
 local $ENV{HOME} = File::Temp::tempdir( CLEANUP => 1 );
 
 
+my $inc_switch = q[-Mblib];
+
 use File::Spec;
 use IPC::Open3;
 use IO::Handle;
@@ -32,7 +34,7 @@ for my $lib (@module_files)
     open my $stdin, '<', File::Spec->devnull or die "can't open devnull: $!";
     my $stderr = IO::Handle->new;
 
-    my $pid = open3($stdin, '>&STDERR', $stderr, $^X, '-Mblib', '-e', "require q[$lib]");
+    my $pid = open3($stdin, '>&STDERR', $stderr, $^X, $inc_switch, '-e', "require q[$lib]");
     binmode $stderr, ':crlf' if $^O eq 'MSWin32';
     my @_warnings = <$stderr>;
     waitpid($pid, 0);
